{
    "name": "KeyboardInput",
    "maps": [
        {
            "name": "Keyboard Control",
            "id": "47ab8a32-04ae-4f6a-82e0-0bff67ef05a3",
            "actions": [
                {
                    "name": "CameraLeft",
                    "type": "Button",
                    "id": "d64c5698-9d31-48db-b2cd-ca49b69dcef1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraRight",
                    "type": "Button",
                    "id": "151a9ec5-a8a8-49fa-a439-d1858b2eed1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedUp",
                    "type": "Value",
                    "id": "bf8a8aaa-d661-49ba-86d0-2a481e8cd278",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedDown",
                    "type": "Value",
                    "id": "8cd70312-ecb8-452c-b2e7-7a4910d445b5",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "a016ae8f-2282-43b2-b206-a9f553374d32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftFrontKey",
                    "type": "Button",
                    "id": "47ec79ec-f059-448f-8fc1-6f635cc7cfed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftBackKey",
                    "type": "Button",
                    "id": "03b83956-e3ca-4277-90e4-9f771b942fbf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "RightFrontKey",
                    "type": "Button",
                    "id": "44a4a83a-4fe7-4b1d-8f4f-843ff709e747",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "RightBackKey",
                    "type": "Button",
                    "id": "66518414-a144-453c-b9b2-de3fe9d5393d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc6a0112-f438-4647-980b-d3d89ed15a1d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "493b1695-0ff0-4003-8d19-ce75f9f5da4e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e75e19fc-34c6-42c8-93d9-16ccabf57c8a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c0ca070-e420-4924-a290-54fc79d6a93a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ff0eeb5-59c8-412d-af3e-029adf36338d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59ec1b40-ce48-4423-b1f2-14b240498f6a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFrontKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30029fff-8817-4ddd-a53c-338124419662",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftBackKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41438ad9-219d-4724-bed2-bcc50eb4ef90",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightBackKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a912a2ee-5830-4f0c-a559-5dab7fa3ed1f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFrontKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}